cmake_minimum_required(VERSION 3.17)
project(signals_lab1 C)

set(CMAKE_C_STANDARD 99)

#add_executable(signals_lab1 lab1/utils.c lab1/problem1.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem2.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem3.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem4.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem5.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem6.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem7.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem8.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem9.c)

#add_executable(signals_lab1 lab2/utils.c lab2/problem1.c)
#add_executable(signals_lab1 lab2/utils.c lab2/problem2.c)
#add_executable(signals_lab1 lab2/utils.c lab2/problem3.c
#add_executable(signals_lab1 lab2/utils.c lab2/problem4.c)
#add_executable(signals_lab1 lab2/utils.c lab2/problem5.c)
add_executable(signals_lab1 lab2/utils.c lab2/problem6.c)
#add_executable(signals_lab1 lab2/utils.c lab2/problem7.c)