cmake_minimum_required(VERSION 3.16)
project(signals_lab1 C)

set(CMAKE_C_STANDARD 99)
link_libraries(m)

#add_executable(signals_lab1 lab1/utils.c lab1/problem1.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem2.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem3.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem4.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem5.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem6.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem7.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem8.c)
#add_executable(signals_lab1 lab1/utils.c lab1/problem9.c)

#add_executable(signals_lab2 lab2/utils.c lab2/problem1.c)
#add_executable(signals_lab2 lab2/utils.c lab2/problem2.c)
#add_executable(signals_lab2 lab2/utils.c lab2/problem3.c
#add_executable(signals_lab2 lab2/utils.c lab2/problem4.c)
#add_executable(signals_lab2 lab2/utils.c lab2/problem5.c)
#add_executable(signals_lab2 lab2/utils.c lab2/problem6.c)
#add_executable(signals_lab2 lab2/utils.c lab2/problem7.c)

#add_executable(signals_lab3 lab3/utils.c lab3/problem1.c)
#add_executable(signals_lab3 lab3/utils.c lab3/problem2.c)
#add_executable(signals_lab3 lab3/utils.c lab3/pearson2D.c lab3/problem3.c)
#add_executable(signals_lab3 lab3/utils.c lab3/problem4.c)
#add_executable(signals_lab3 lab3/utils.c lab3/problem5.c)
add_executable(signals_lab3 lab3/utils.c lab3/problem6.c)